--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 				<!-- Three -->
 					<section id="three">
 						<h2>Get In Touch</h2>
-						<p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>
+						<p>Contact me if you have any questions or just want to hit me up to talk CS! I love to collaborate on projects and apps! Let me know if you have any suggestions for projcets to start!</p>
 						<div class="row">
 							<div class="8u 12u$(small)">
 								<form method="post" action="#">
@@ -101,17 +101,16 @@
 								<ul class="labeled-icons">
 									<li>
 										<h3 class="icon fa-home"><span class="label">Address</span></h3>
-										1234 Somewhere Rd.<br />
-										Nashville, TN 00000<br />
-										United States
+										2300 Nueces St.<br />
+										Austin, TX, 78705
 									</li>
 									<li>
 										<h3 class="icon fa-mobile"><span class="label">Phone</span></h3>
-										000-000-0000
+										(319) 651-6181
 									</li>
 									<li>
 										<h3 class="icon fa-envelope-o"><span class="label">Email</span></h3>
-										<a href="#">hello@untitled.tld</a>
+										<a href="#">shivampatel@utexas.edu</a>
 									</li>
 								</ul>
 							</div>
@@ -444,10 +443,10 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
-						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+						<li><a href="https://github.com/shivamppatel" class="icon fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://www.linkedin.com/in/shivam-p-patel/" class="icon fa-linkedin-square"><span class="label">LinkedIn</span></a></li>
+						<li><a href="mailto:shivampatel@utexas.edu" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+						<li><a href="#" class="icon fa-file-text"><span class="label">Resume</span></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
