--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+					<a href="https://www.linkedin.com/in/shivam-p-patel/" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
 					<h1><strong>Hi! I'm Shivam Patel</strong>, a Computer Science and Mathematics Major<br />
 					at The University of Texas <br />
 					at Austin</h1>
@@ -44,32 +44,32 @@
 					<section id="two">
 						<h2>Recent Work</h2>
 						<div class="row">
-							<article class="6u 12u$(xsmall) work-item">
-								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>Magna sed consequat tempus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+							<article class="6u 12u$(xsmall)">
+								<a href="https://github.com/JGOOSH/visual_ar_localization" class="image fit thumb"><img src="images/chain.png" alt="" /></a>
+								<h3>Visual Localization Using AR Tags as Fiduciary Markers</h3>
+								<p>Designed a ROS AR-based localization system to replace Monte-Carlo system within BWI-Lab Robots</p>
 							</article>
-							<article class="6u$ 12u$(xsmall) work-item">
-								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-								<h3>Ultricies lacinia interdum</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+							<article class="6u$ 12u$(xsmall)">
+								<a href="http://yelpmeout.herokuapp.com/" class="image fit thumb"><img src="images/Yelp_Screenshot.png" alt="" /></a>
+								<h3>Restaurant Experience Finder</h3>
+								<p>Created Python-based restaurant and experience locator using Yelp and IP Locatio APIs</p>
 							</article>
-							<article class="6u 12u$(xsmall) work-item">
+							<article class="6u 12u$(xsmall)">
 								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
 								<h3>Tortor metus commodo</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
-							<article class="6u$ 12u$(xsmall) work-item">
-								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
+							<article class="6u$ 12u$(xsmall)">
+								<a href="https://mtrxcalc.herokuapp.com/" class="image fit thumb"><img src="images/Matrix_Screenshot.png" alt="" /></a>
 								<h3>Quam neque phasellus</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
-							<article class="6u 12u$(xsmall) work-item">
+							<article class="6u 12u$(xsmall)">
 								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
 								<h3>Nunc enim commodo aliquet</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
-							<article class="6u$ 12u$(xsmall) work-item">
+							<article class="6u$ 12u$(xsmall)">
 								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
 								<h3>Risus ornare lacinia</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
@@ -446,7 +446,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<li><a href="https://github.com/shivamppatel" class="icon fa-github"><span class="label">Github</span></a></li>
 						<li><a href="https://www.linkedin.com/in/shivam-p-patel/" class="icon fa-linkedin-square"><span class="label">LinkedIn</span></a></li>
 						<li><a href="mailto:shivampatel@utexas.edu" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-						<li><a href="#" class="icon fa-file-text"><span class="label">Resume</span></a></li>
+						<li><a href="Shivam_Patel_Resume.pdf" class="icon fa-file-text"><span class="label">Resume</span></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
