--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
 					<h1><strong>Hi! I'm Shivam Patel</strong>, a Computer Science and Mathematics Major<br />
 					at The University of Texas <br />
 					at Austin</h1>
+					
+					<br />
+					<h6>Incoming Data Engineering Intern @ <a id="C1" href="https://www.capitalone.com/">Capital One</a></h6>
+					<h6>Software Data Analytics Intern @ <a id="McD" href="https://www.mcdonalds.com/us/en-us.html">McDonald's HQ</a></h6>
+					<h6>Application Development Intern @ <a id="SonneIndustries" href="http://www.thelightsentry.com/">Sonne Industries</a></h6>
+
 				</div>
 			</header>
 
@@ -31,9 +37,12 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>IDK WHAT TO PUT HERE</h2>
+							<h2>WHO AM I?</h2>
 						</header>
-						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
+						<p>
+							I'm currently a Sophomore CS and Math major at UT-Austin. I love to learn and teach new aspects of Computer Science. In my free time, I enjoy building tech projects that can help people use technology in different ways and help me understand how complex software processes work in our world today! Also, I tutor STEM and CS focused subjects to secondary-education students. 
+						</p>
+						<br />
 					</section>
 
 				<!-- Two -->
@@ -51,7 +60,7 @@
 								<p>Created Python-based restaurant and experience locator using Yelp and IP Locatio APIs</p>
 							</article>
 							<article class="6u 12u$(xsmall)">
-								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
+								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/Lights_Screenshot.png" alt="" /></a>
 								<h3>Visual Communication Medium - ROS</h3>
 								<p>Created communication medium for UT-Austin BWI Robots to convey current robot status to bystanders </p>
 							</article>
@@ -62,7 +71,7 @@
 							</article>
 						</div>
 						<ul class="actions">
-							<li><a href="#" class="button">Full Portfolio</a></li>
+							<li><a href="https://github.com/shivamppatel" class="button">Full Portfolio</a></li>
 						</ul>
 					</section>
 
@@ -87,8 +96,7 @@
 								<ul class="labeled-icons">
 									<li>
 										<h3 class="icon fa-home"><span class="label">Address</span></h3>
-										2300 Nueces St.<br />
-										Austin, TX, 78705
+										Austin, TX, USA
 									</li>
 									<li>
 										<h3 class="icon fa-mobile"><span class="label">Phone</span></h3>
