--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 				<!-- Three -->
 					<section id="three">
 						<h2>Get In Touch</h2>
-						<p>Contact me if you have any questions or just want to hit me up to talk CS! I love to collaborate on projects and apps! Let me know if you have any suggestions for projcets to start!</p>
+						<p>Contact me if you have any questions or just want to hit me up to talk CS! I love to collaborate on projects and apps. Let me know if you have any suggestions for projcets to start.</p>
 						<div class="row">
 							<div class="8u 12u$(small)">
 								<form method="post" action="#">
