--- a/index.html
+++ b/index.html
@@ -6,12 +6,21 @@
 -->
 <html>
 	<head>
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-112009926-1"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+
+		  gtag('config', 'UA-112009926-1');
+		</script>
 		<title>Shivam Patel</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+		<!-- Global site tag (gtag.js) - Google Analytics -->
 	</head>
 	<body id="top">
 
