--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 							<h2>WHO AM I?</h2>
 						</header>
 						<p>
-							I'm currently a Sophomore CS and Math major at UT-Austin. I love to learn and teach new aspects of Computer Science. In my free time, I enjoy building tech projects that can help people use technology in different ways and help me understand how complex software processes work in our world today! Also, I tutor STEM and CS focused subjects to secondary-education students. 
+							I'm currently a Junior CS and Math major at UT-Austin. I love to learn and teach new aspects of Computer Science. In my free time, I enjoy building tech projects that can help people use technology in different ways and help me understand how complex software processes work in our world today! Also, I tutor STEM and CS focused subjects to secondary-education students. 
 						</p>
 						<br />
 					</section>
