--- a/index.html
+++ b/index.html
@@ -28,12 +28,13 @@
 			<header id="header">
 				<div class="inner">
 					<a href="https://www.linkedin.com/in/shivam-p-patel/" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>Hi! I'm Shivam Patel</strong>, a Computer Science and Mathematics Major<br />
+					<h1><strong>Hi! I'm Shivam Patel</strong>, a Computer Science Major<br />
 					at The University of Texas <br />
 					at Austin</h1>
 					
 					<br />
-					<h6>Incoming Data Engineering Intern @ <a id="C1" href="https://www.capitalone.com/">Capital One</a></h6>
+					<h6>Software Engineering Intern @ <a id="C1" href="https://www.facebook.com/">Facebook</a></h6>
+					<h6>Software Engineering Intern @ <a id="C1" href="https://www.capitalone.com/">Capital One</a></h6>
 					<h6>Software Data Analytics Intern @ <a id="McD" href="https://www.mcdonalds.com/us/en-us.html">McDonald's HQ</a></h6>
 					<h6>Application Development Intern @ <a id="SonneIndustries" href="http://www.thelightsentry.com/">Sonne Industries</a></h6>
 
