--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 					at Austin</h1>
 					
 					<br />
+					<h6>Incoming Software Engineer @ <a id="C1" href="https://www.facebook.com/">Facebook</a></h6>
 					<h6>Software Engineering Intern @ <a id="C1" href="https://www.facebook.com/">Facebook</a></h6>
 					<h6>Software Engineering Intern @ <a id="C1" href="https://www.capitalone.com/">Capital One</a></h6>
 					<h6>Software Data Analytics Intern @ <a id="McD" href="https://www.mcdonalds.com/us/en-us.html">McDonald's HQ</a></h6>
@@ -50,7 +51,7 @@
 							<h2>WHO AM I?</h2>
 						</header>
 						<p>
-							I'm currently a Junior CS and Math major at UT-Austin. I love to learn and teach new aspects of Computer Science. In my free time, I enjoy building tech projects that can help people use technology in different ways and help me understand how complex software processes work in our world today! Also, I tutor STEM and CS focused subjects to secondary-education students. 
+							I'm currently a Senior CS major at UT-Austin. I love to learn and teach new aspects of Computer Science. In my free time, I enjoy building tech projects that can help people use technology in different ways and help me understand how complex software processes work in our world today! Also, I tutor STEM and CS focused subjects to secondary-education students. 
 						</p>
 						<br />
 					</section>
