--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
 								<p>Designed a ROS AR-based localization system to replace Monte-Carlo system within BWI-Lab Robots</p>
 							</article>
 							<article class="6u$ 12u$(xsmall)">
+								<a href="https://github.com/shivamppatel/OptimalPlaylist" class="image fit thumb"><img src="images/Optimal_Playlist_Screenshot.png" alt="" /></a>
+								<h3>Optimal Playlist Generator</h3>
+								<p>Application that generates an optimal playlist based on several accounts and their listening history and preferences.</p>
+							</article>
+							<article class="6u$ 12u$(xsmall)">
 								<a href="http://yelpmeout.herokuapp.com/" class="image fit thumb"><img src="images/Yelp_Screenshot.png" alt="" /></a>
 								<h3>Restaurant Experience Finder</h3>
 								<p>Created Python-based restaurant and experience locator using Yelp and IP Locatio APIs</p>
@@ -75,11 +80,7 @@
 								<h3>Visual Communication Medium - ROS</h3>
 								<p>Created communication medium for UT-Austin BWI Robots to convey current robot status to bystanders </p>
 							</article>
-							<article class="6u$ 12u$(xsmall)">
-								<a href="https://mtrxcalc.herokuapp.com/" class="image fit thumb"><img src="images/Matrix_Screenshot.png" alt="" /></a>
-								<h3>Linear Algebra Calculator</h3>
-								<p>Web application to assist students in elementary Matrix computations such as Transpose and Determinant</p>
-							</article>
+							
 						</div>
 						<ul class="actions">
 							<li><a href="https://github.com/shivamppatel" class="button">Full Portfolio</a></li>
