--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
 					at Austin</h1>
 					
 					<br />
-					<h6>Incoming Software Engineer @ <a id="C1" href="https://www.facebook.com/">Facebook</a></h6>
-					<h6>Software Engineering Intern @ <a id="C1" href="https://www.facebook.com/">Facebook</a></h6>
+					<h6>Incoming Software Engineer @ <a id="FB" href="https://www.facebook.com/">Facebook</a></h6>
+					<h6>Software Engineering Intern @ <a id="FB" href="https://www.facebook.com/">Facebook</a></h6>
 					<h6>Software Engineering Intern @ <a id="C1" href="https://www.capitalone.com/">Capital One</a></h6>
-					<h6>Software Data Analytics Intern @ <a id="McD" href="https://www.mcdonalds.com/us/en-us.html">McDonald's HQ</a></h6>
-					<h6>Application Development Intern @ <a id="SonneIndustries" href="http://www.thelightsentry.com/">Sonne Industries</a></h6>
+					<h6>Software & Analytics Intern @ <a id="McD" href="https://www.mcdonalds.com/us/en-us.html">McDonald's Corporate HQ</a></h6>
+					<h6>Software Engineering Intern @ <a id="SonneIndustries" href="http://www.thelightsentry.com/">Sonne Industries</a></h6>
 
 				</div>
 			</header>
@@ -70,15 +70,15 @@
 								<h3>Optimal Playlist Generator</h3>
 								<p>Application that generates an optimal playlist based on several accounts and their listening history and preferences.</p>
 							</article>
-							<article class="6u$ 12u$(xsmall)">
-								<a href="http://yelpmeout.herokuapp.com/" class="image fit thumb"><img src="images/Yelp_Screenshot.png" alt="" /></a>
-								<h3>Restaurant Experience Finder</h3>
-								<p>Created Python-based restaurant and experience locator using Yelp and IP Locatio APIs</p>
-							</article>
 							<article class="6u 12u$(xsmall)">
 								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/Lights_Screenshot.png" alt="" /></a>
 								<h3>Visual Communication Medium - ROS</h3>
 								<p>Created communication medium for UT-Austin BWI Robots to convey current robot status to bystanders </p>
+							</article>
+							<article class="6u$ 12u$(xsmall)">
+								<a href="http://yelpmeout.herokuapp.com/" class="image fit thumb"><img src="images/Yelp_Screenshot.png" alt="" /></a>
+								<h3>Restaurant Experience Finder</h3>
+								<p>Created Python-based restaurant and experience locator using Yelp and IP Locatio APIs</p>
 							</article>
 							
 						</div>
@@ -130,7 +130,7 @@
 						<li><a href="https://github.com/shivamppatel" class="icon fa-github"><span class="label">Github</span></a></li>
 						<li><a href="https://www.linkedin.com/in/shivam-p-patel/" class="icon fa-linkedin-square"><span class="label">LinkedIn</span></a></li>
 						<li><a href="mailto:shivampatel@utexas.edu" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-						<li><a href="Shivam_Patel_Resume.pdf" class="icon fa-file-text"><span class="label">Resume</span></a></li>
+						<li><a href="shivam_patel_resume.pdf" class="icon fa-file-text"><span class="label">Resume</span></a></li>
 					</ul>
 				</div>
 			</footer>
