--- a/index.html
+++ b/index.html
@@ -50,10 +50,26 @@
 						<header class="major">
 							<h2>WHO AM I?</h2>
 						</header>
-						<p>
-							I'm currently a Senior CS major at UT-Austin. I love to learn and teach new aspects of Computer Science. In my free time, I enjoy building tech projects that can help people use technology in different ways and help me understand how complex software processes work in our world today! Also, I tutor STEM and CS focused subjects to secondary-education students. 
+						<p style="margin-bottom:10px;">
+							I'm currently a Senior CS major at UT-Austin. I love to learn and teach new aspects of Computer Science. In my free time, I enjoy building tech projects that can help people use technology in different ways and help me understand how complex software processes work in our world today! 
 						</p>
-						<br />
+						<p style="margin-bottom:5px;">
+							Also, I tutor STEM and CS focused subjects to secondary-education students! Subjects I have tutored in the past:
+						</p>
+							<ul style="padding-left:50px;padding-top: 0px;margin-bottom: 5px;">
+								<li>AP Computer Science</li>
+								<li>Introduction to Programming (Java & Python)</li>
+								<li>Data Structures & Algorithms</li>
+								<li>Operating Systems</li>
+								<li>Artificial Intelligence</li>
+								<li>Computer Vision</li>
+								<li>High School Math & Science Curriculums</li>
+							</ul>
+						<p>
+							If you are interested in tutoring, please fill out the form below to contact me. 
+						</p>
+
+						
 					</section>
 
 				<!-- Two -->
