--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 								<ul class="labeled-icons">
 									<li>
 										<h3 class="icon fa-home"><span class="label">Address</span></h3>
-										Austin, TX, USA
+										Austin, TX & Seattle, WA
 									</li>
 									<li>
 										<h3 class="icon fa-mobile"><span class="label">Phone</span></h3>
