--- a/index.html
+++ b/index.html
@@ -109,16 +109,21 @@
 						<p>Contact me if you have any questions or just want to hit me up to talk CS! I love to collaborate on projects and apps. Let me know if you have any suggestions for projects to start.</p>
 						<div class="row">
 							<div class="8u 12u$(small)">
-								<form method="post" action="#">
+								
+									<!-- <input type="text" name="name">
+									<input type="email" name="_replyto">
+									<input type="submit" value="Send">
+								  </form> -->
+								<form action="https://formspree.io/xpzjavkn" method="POST">
 									<div class="row uniform 50%">
 										<div class="6u 12u$(xsmall)"><input type="text" name="name" id="name" placeholder="Name" /></div>
-										<div class="6u$ 12u$(xsmall)"><input type="email" name="email" id="email" placeholder="Email" /></div>
+										<div class="6u$ 12u$(xsmall)"><input type="email" name="_replyto" id="email" placeholder="Email" /></div>
 										<div class="12u$"><textarea name="message" id="message" placeholder="Message" rows="4"></textarea></div>
 									</div>
+									<ul class="actions">
+										<li><input type="submit" value="Send Message" /></li>
+									</ul>
 								</form>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
 							</div>
 							<div class="4u$ 12u$(small)">
 								<ul class="labeled-icons">
