--- a/index.html
+++ b/index.html
@@ -28,12 +28,11 @@
 			<header id="header">
 				<div class="inner">
 					<a href="https://www.linkedin.com/in/shivam-p-patel/" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>Hi! I'm Shivam Patel</strong>, a Computer Science Major<br />
-					at The University of Texas <br />
-					at Austin</h1>
+					<h1><strong>Hi! I'm Shivam Patel</strong>, a Software Engineer<br />
+					in Seattle</h1>
 					
 					<br />
-					<h6>Incoming Software Engineer @ <a id="FB" href="https://www.facebook.com/">Facebook</a></h6>
+					<h6>Software Engineer @ <a id="FB" href="https://www.facebook.com/">Facebook</a></h6>
 					<h6>Software Engineering Intern @ <a id="FB" href="https://www.facebook.com/">Facebook</a></h6>
 					<h6>Software Engineering Intern @ <a id="C1" href="https://www.capitalone.com/">Capital One</a></h6>
 					<h6>Software & Analytics Intern @ <a id="McD" href="https://www.mcdonalds.com/us/en-us.html">McDonald's Corporate HQ</a></h6>
